Fix item list spacing if small

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -415,6 +415,10 @@ section.item {
     }
 }
 
+.item-show-lg .title {
+    padding-left: 20px;
+}
+
 .item-info {
     padding-left: 20px;
 }
@@ -447,7 +451,7 @@ section.item {
 .item-show-xs {
     @include item-show-inline;
     margin: 0 !important;
-    padding: 0 !important;
+    padding: 0px 5px !important;
     .title {
         font-size: 100%;
     }
@@ -727,7 +731,6 @@ the form-control fails to do that so we do the border ourselves */
 .title {
     font-size: 160%;
     margin: 0 20px 0 0;
-    padding-left: 20px;
 
     /* add several rules, see https://stackoverflow.com/a/36555643 */
     overflow-wrap: break-word;
